--- a/static/index.html
+++ b/static/index.html
@@ -152,7 +152,7 @@
                 <a href="https://epss.ucla.edu/people/staff/1154/">Daniel Chung</a>, 
                 <a href="https://github.com/sixtycycles">Roderic O'Connor</a>, and 
                 <a href="https://epss.ucla.edu/people/faculty/543/">Jon Aurnou</a>. <br>
-                DIYRotate was developed from the <a href="https://new.nsf.gov/funding/opportunities/geophysics-ph">NSF Geophysics Program</a>. <br>
+                DIYRotate was developed with support from the <a href="https://new.nsf.gov/funding/opportunities/geophysics-ph">NSF Geophysics Program</a>. <br>
                 <i id="useCount"></i>
             </div>
         </footer>
