--- a/static/index.html
+++ b/static/index.html
@@ -17,8 +17,7 @@
         integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
         crossorigin="anonymous"></script>
         <script src="ndpr.js"></script>
-        <style> input:invalid { border: red solid 3px; }
-        </style>
+        <style> input:invalid { border: red solid 3px; } .rainbow { background: linear-gradient(90deg,#FF0000,#FF7F00,#00FF00,#0000FF,#4B0082,#8B00FF); background-clip: text; color: transparent; } </style>
     </head>
 
     <body>
@@ -39,22 +38,18 @@
                 </div>
         </header>
         <div class="container mt-3">
-            <div class="form-group row">
+            <div class="form-group row gx-0">
                 <label class="col-md-8 mb-0 col-form-label" for="rpm">RPM of rotating frame (positive is counterclockwise)</label>
                 <div class="col-md-4">
                     <input class="form-control" pattern="\d*(\.\d*)?" id="rpm" autofocus placeholder=10.0>
                 </div>
             </div>
-            <div class="form-group row">
-                <label class="col-md-8 mb-0 col-form-label" for="fileInput">Select a file</label>
-                <div class="col-md-4">
-                    <input class="form-control" type="file" id="fileInput" autocomplete=off disabled accept="video/*" />
+            <div id="advancedCard" class="form-group row gx-0">
+                <div class="form-group row gx-0">
+                    <label class="col-md-8 mb-0 col-form-label" for="advancedBut"><div id="advancedLabel" style="width:fit-content">Advanced Options</div></label>
+                    <button id="advancedBut" data-bs-toggle="collapse" href="#advancedCollapse" disabled tabindex=-1 class="col-md-4 btn btn-outline-primary collapsed">Expand...</button>
                 </div>
-            </div>
-            <div id="advancedCard">
-                <label id="advancedBut" data-bs-toggle="collapse" href="#advancedCollapse" role="button"
-                    class="mb-0 col-form-label" aria-expanded="false">Advanced [+]</label>
-                <div class="collapse" id="advancedCollapse">
+                <div class="collapse row" id="advancedCollapse">
                     <div class="row"> <text>
                         Track objects in video by one of the two following methods:
                     </text> </div>
@@ -94,10 +89,16 @@
                     </div>
                 </div>
             </div>
-            <div class="row d-flex align-items-center">
+            <div class="form-group row gx-0">
+                <label class="col-md-8 mb-0 col-form-label" for="fileInput">Select a file</label>
+                <div class="col-md-4">
+                    <input class="form-control" type="file" id="fileInput" autocomplete=off disabled accept="video/*" />
+                </div>
+            </div>
+            <div class="row gx-0 d-flex align-items-center">
                 <div class="col-md-4" style="z-index:-1">
                     <ul class="alert alert-light mb-0" style="font-size:small">
-                        <li id="st1" style="font-weight:bolder"> Step 1: select rotation RPM</li>
+                        <li id="st1" style="font-weight:bolder"> Step 1: select rotation RPM,<br>&emsp;optionally an advanced mode</li>
                         <li id="st2"> Step 2: select video file</li>
                         <ul id="st20" hidden>
                             <li id="st21">  Step 2.1: manually select rotation circle</li>
