make RPM input moore obv

--- a/static/index.html
+++ b/static/index.html
@@ -41,7 +41,7 @@
             <div class="form-group row gx-0">
                 <label class="col-md-8 mb-0 col-form-label" for="rpm">RPM of rotating frame (positive is counterclockwise)</label>
                 <div class="col-md-4">
-                    <input class="form-control" pattern="\d*(\.\d*)?" id="rpm" autofocus placeholder=10.0>
+                    <input class="form-control" pattern="\d*(\.\d*)?" id="rpm" autofocus placeholder="Fill in recording RPM first...">
                 </div>
             </div>
             <div id="advancedCard" class="form-group row gx-0">
