add option to draw entire history of points that are valid

--- a/static/index.html
+++ b/static/index.html
@@ -77,12 +77,15 @@
                             </div>
                             <div>
                                 <label class="form-check-label mb-0" style="margin-left:10px" for="exportCSV">
-                                    <input class="form-check-input" type="checkbox" id="exportCSV" autocomplete=off /> Download list of tracked points in rotating frame as .csv file
+                                    <input class="form-check-input" type="checkbox" id="exportCSV" autocomplete=off /> Download data about tracked points in the rotating frame as a CSV file
                                 </label>
                             </div>
                             <div>
                                 <label class="form-check-label mb-0" style="margin-left:10px" for="visRadius">
                                     <input class="form-check-input" type="checkbox" id="visRadius" autocomplete=off /> Visualize rotation radius and velocity of tracked points in the rotating frame
+                                </label>
+                                <label class="form-check-label mb-0" style="margin-left:10px" for="fullTrail">
+                                    <input class="form-check-input" type="checkbox" id="fullTrail" autocomplete=off /> Visualize entire history of points still being tracked, instead of just the 15 most recent points
                                 </label>
                             </div>
                         </div>
